--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "lodash": "^4.17.4",
+    "md5": "^2.2.1",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
